add .ipynb for Linear Regression with CO2 dataset

--- a/Regression/Simple Linear Regression_CO2Emission.ipynb
+++ b/Regression/Simple Linear Regression_CO2Emission.ipynb
@@ -167,7 +167,7 @@
     }
    ],
    "source": [
-    "co2Data.head()"
+    "co2Data[:5 # head()"
    ]
   },
   {
@@ -1062,9 +1062,11 @@
    "id": "38fbabac-cc93-4266-ac5f-a48ea9096c62",
    "metadata": {},
    "source": [
-    "- <b> Model Performance: </b> <i> The low Mean Absolute Error (MAE) of approximately 15.44 indicates that, on average, the model's predictions are close to the actual values. This suggests a good level of accuracy in predicting outcomes. The high R-Squared value of about 0.84 implies that the model explains a significant portion (84.14%) of the variance in the dependent variable, indicating strong explanatory power. </i>\n",
+    "- <b> Model Performance: </b> <i> The low Mean Absolute Error (MAE) of approximately 14.1395 indicates that, on average, the model's predictions are close to the actual values. This suggests a good level of accuracy in predicting outcomes. The high R-Squared value of about 0.84 implies that the model explains a significant portion (84.14%) of the variance in the dependent variable, indicating strong explanatory power. </i>\n",
     "\n",
-    "- <b> Error Analysis: </b> <i> The Mean Squared Error (MSE) of approximately 614.38 and the Root Mean Squared Error (RMSE) of about 24.79 indicate that there are some larger errors in predictions, as RMSE gives more weight to larger errors. While the model performs well overall, it may be beneficial to investigate the cases where predictions deviate significantly from actual values to further improve performance. </i>"
+    "- <b> Error Analysis: </b> <i> The Mean Squared Error (MSE) of approximately 521.2516 and the Root Mean Squared Error (RMSE) of about 22.83 indicate that there are some larger errors in predictions, as RMSE gives more weight to larger errors. While the model performs well overall, it may be beneficial to investigate the cases where predictions deviate significantly from actual values to further improve performance. </i>\n",
+    "\n",
+    "- <i> The R-squared value of 0.8498 implies that approximately 85% of the variability in CO2 emissions is explained by the features in your model, indicating a strong fit and effective predictive power. </i>"
    ]
   },
   {
@@ -1260,9 +1262,11 @@
    "id": "ced14008-75ec-4d34-b2d9-89abc73c878c",
    "metadata": {},
    "source": [
-    "- <b> Model Performance: </b> <i>  The R-Squared value of approximately 0.73 indicates that the model explains about 73% of the variance in the dependent variable. This suggests a reasonable fit, but there is still 27% of the variance that remains unexplained, indicating potential areas for improvement, such as feature selection or model complexity. </i>\n",
+    "- <b> Model Performance: </b> <i>  The R-Squared value of approximately 0.7394 indicates that the model explains about 73% of the variance in the dependent variable. This suggests a reasonable fit, but there is still 27% of the variance that remains unexplained, indicating potential areas for improvement, such as feature selection or model complexity. </i>\n",
     "\n",
-    "- <b> Error Analysis: </b> <i> The Mean Absolute Error (MAE) of about 23.90 and the Root Mean Squared Error (RMSE) of approximately 32.17 reflect moderate prediction accuracy. The RMSE being higher than the MAE suggests that there are some larger errors affecting the overall performance, which might indicate the presence of outliers or the need for additional modeling techniques to better capture the data's patterns.</i>"
+    "- <b> Error Analysis: </b> <i> The Mean Absolute Error (MAE) of about 22.50 and the Root Mean Squared Error (RMSE) of approximately 30.076 reflect moderate prediction accuracy. The RMSE being higher than the MAE suggests that there are some larger errors affecting the overall performance, which might indicate the presence of outliers or the need for additional modeling techniques to better capture the data's patterns.</i>\n",
+    "\n",
+    "- <i> The R-squared value of 0.7394 implies that approximately 73.94% of the variability in CO2 emissions is explained by the features in your model, indicating a reasonable fit and effective predictive power, while also highlighting room for enhancement. </i>"
    ]
   }
  ],
