add ipynb for Simple Linear Regression with CO2Emission dataset

--- a/Regression/Simple Linear Regression_CO2Emission.ipynb
+++ b/Regression/Simple Linear Regression_CO2Emission.ipynb
@@ -167,7 +167,7 @@
     }
    ],
    "source": [
-    "co2Data[:5 # head()"
+    "co2Data[:5] # head()"
    ]
   },
   {
@@ -586,7 +586,7 @@
     {
      "data": {
       "text/plain": [
-       "[579, 1279, 1605, 3223, 1004, 448, 1083, 4964, 5334, 2909]"
+       "[3216, 4477, 5380, 5307, 452, 916, 2495, 5745, 3110, 2224]"
       ]
      },
      "execution_count": 13,
@@ -713,15 +713,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.5</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>136</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>12.7</td>\n",
+       "      <td>255</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3.5</td>\n",
-       "      <td>12.7</td>\n",
-       "      <td>255</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -737,8 +737,8 @@
        "   EngineSize  FuelConsumptionCity  CO2Emissions\n",
        "0         2.0                  9.9           196\n",
        "1         2.4                 11.2           221\n",
-       "2         1.5                  6.0           136\n",
-       "3         3.5                 12.7           255\n",
+       "2         3.5                 12.7           255\n",
+       "3         3.5                 12.1           244\n",
        "4         3.5                 11.9           230"
       ]
      },
@@ -748,7 +748,7 @@
     }
    ],
    "source": [
-    "trainingSet.head()"
+    "trainingSet[:5]"
    ]
   },
   {
@@ -786,9 +786,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3.5</td>\n",
-       "      <td>12.1</td>\n",
-       "      <td>244</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>136</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -798,21 +798,21 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>9.9</td>\n",
-       "      <td>202</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>359</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>13.1</td>\n",
-       "      <td>258</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>338</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>15.1</td>\n",
-       "      <td>304</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>202</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -820,11 +820,11 @@
       ],
       "text/plain": [
        "   EngineSize  FuelConsumptionCity  CO2Emissions\n",
-       "0         3.5                 12.1           244\n",
+       "0         1.5                  6.0           136\n",
        "1         1.8                  9.7           193\n",
-       "2         2.0                  9.9           202\n",
-       "3         3.0                 13.1           258\n",
-       "4         3.0                 15.1           304"
+       "2         5.9                 18.0           359\n",
+       "3         4.7                 17.4           338\n",
+       "4         2.0                  9.9           202"
       ]
      },
      "execution_count": 18,
@@ -833,7 +833,7 @@
     }
    ],
    "source": [
-    "testingSet.head()"
+    "testingSet[:5]"
    ]
   },
   {
@@ -898,8 +898,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intercept: 58.33270621828103\n",
-      "Regression Coefficient: 15.311154784971464\n"
+      "Intercept: 57.21480705498092\n",
+      "Regression Coefficient: 15.384191563505142\n"
      ]
     }
    ],
@@ -917,11 +917,11 @@
     {
      "data": {
       "text/plain": [
-       "0    243.597679\n",
-       "1    206.850908\n",
-       "2    209.913139\n",
-       "3    258.908834\n",
-       "4    289.531143\n",
+       "0    149.519956\n",
+       "1    206.441465\n",
+       "2    334.130255\n",
+       "3    324.899740\n",
+       "4    209.518304\n",
        "Name: FuelConsumptionCity, dtype: float64"
       ]
      },
@@ -994,9 +994,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE ➔ 14.139509108706694\n",
-      "MSE ➔ 521.2518574990764\n",
-      "RMSE ➔ 22.83094079312275\n"
+      "MAE ➔ 14.683852933278953\n",
+      "MSE ➔ 577.5474083205081\n",
+      "RMSE ➔ 24.032216050970167\n"
      ]
     }
    ],
@@ -1016,7 +1016,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R-Squared/ Coefficient of determination ➔ 0.8498117590940235\n"
+      "R-Squared/ Coefficient of determination ➔ 0.8376893064817689\n"
      ]
     }
    ],
@@ -1038,7 +1038,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Adjusted R-Squared ➔ 0.849688249027489\n"
+      "Adjusted R-Squared ➔ 0.8375558272930204\n"
      ]
     }
    ],
@@ -1098,8 +1098,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intercept: 133.92882503060383\n",
-      "Regression Coefficient: 37.09821780999164\n"
+      "Intercept: 134.27333574662077\n",
+      "Regression Coefficient: 37.00807356713155\n"
      ]
     }
    ],
@@ -1117,11 +1117,11 @@
     {
      "data": {
       "text/plain": [
-       "0    263.772587\n",
-       "1    200.705617\n",
-       "2    208.125261\n",
-       "3    245.223478\n",
-       "4    245.223478\n",
+       "0    189.785446\n",
+       "1    200.887868\n",
+       "2    352.620970\n",
+       "3    308.211282\n",
+       "4    208.289483\n",
        "Name: EngineSize, dtype: float64"
       ]
      },
@@ -1194,9 +1194,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE ➔ 22.557565729007422\n",
-      "MSE ➔ 904.5073374837724\n",
-      "RMSE ➔ 30.07502847020718\n"
+      "MAE ➔ 23.0898543378372\n",
+      "MSE ➔ 952.6750847028383\n",
+      "RMSE ➔ 30.86543511280601\n"
      ]
     }
    ],
@@ -1216,7 +1216,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R-Squared/ Coefficient of determination ➔ 0.7393843994052782\n"
+      "R-Squared/ Coefficient of determination ➔ 0.7322655223312055\n"
      ]
     }
    ],
@@ -1238,7 +1238,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Adjusted R-Squared ➔ 0.7391700773653154\n"
+      "Adjusted R-Squared ➔ 0.7320453459515437\n"
      ]
     }
    ],
